--- a/README
+++ b/README
@@ -2,20 +2,16 @@ Overview
 TOPSMDB is a simple web application to manage a list of members for an organization.
 
 History
-This application was developed in 2012 to manage the 4,000 members of Tomorrow's Ontario Public Service (TOPS), 
-an employee network of the Ontario Public Service (an employee network is an association of employees, working
+This application was developed in 2012 to manage the 4,000 members of Tomorrow's Ontario Public Service (TOPS), an employee network of the Ontario Public Service (an employee network is an association of employees, working
 as volunteers). TOPS is focused on professional development and innovation (Leading, Learning, and Linking/Networking).
 
-When I took over as IT provincial lead early 2012, one of my first orders of business was to fix the old database app.
-TOPSMDB was designed to be portable (a WAR file with an embedded database that could be dropped on any Servlet container), 
+When I took over as IT provincial lead early 2012, one of my first orders of business was to fix the old database app. TOPSMDB was designed to be portable (a WAR file with an embedded database that could be dropped on any Servlet container), 
 and hackable (free software suited to collaborative development, using one of the enterprise software languages: Java). 
 
-For this project, I explored flexigrid (thanks to Paulo P. Marinas for this wonderful tool) and Google gson library.
-The login code from Prashant brings some welcome eye-candy.
+For this project, I explored flexigrid (thanks to Paulo P. Marinas for this wonderful tool) and Google gson library. The login code from Prashant brings some welcome eye-candy.
 
 Licensing, disclaimers, etc
-This project is made available under the GNU GPLv3 license. Best attempt has been made to document each file, and 
-to verify potential compatibility issues. For example, the FSF considers the Apache 2 license is compatible with GPLv3.
+This project is made available under the GNU GPLv3 license. Best attempt has been made to document each file, and to verify potential compatibility issues. For example, the FSF considers the Apache 2 license is compatible with GPLv3.
 You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 Marc Lijour
